
- Changed interface for creating read-only operator expressions.

- Replaced RDB_table by RDB_object.

- Replaced RDB_project(), RDB_union() etc. by RDB_expr_to_vtable()

- Removed RDB_expr_any(), RDB_expr_all(), etc.

- Added RDB_init_table() and RDB_init_table_from_type() for creating
  local tables; removed argument 'global' from RDB_create_table()
  and RDB_create_table_from_type().

- Renamed RDB_expr_var() to RDB_var_ref().

- Removed RDB_parse_table().

- Changes to expression syntax for better conformance with TTM, third
  edition.

Changes for Duro 0.11

- Added RDB_type_attrs().

- Removed RDB_set_errfile(), RDB_get_errfile(), RDB_set_errfn(),
  and RDB_get_errfn().

- Durotcl: Added duro::env seterrfile. dberror is no longer called.

- Bugfixes.

Changes for Duro 0.10

- Replaced RDB_RATIONAL by RDB_FLOAT and RDB_DOUBLE.

- RDB_update() and RDB_delete return the number of tuples updated or
  deleted, respectively.

- Added option --without-tcl to configure.

- RDB_cardinality() returns an RDB_int.

- Added SEMIMINUS and SEMIJOIN.

- Redesigned the API, using scalar types for returning error information
  instead of a numerical error code.

- Added IF operator.

- Dropped catalog table SYS_POSSREPS.

- Implemented RDB_multi_assign().

- Durotcl uses Tutorial D syntax to represent values of user-defined
  types. The comparison operator is passed the actual representation.

- Read-only operators can access the current transaction if called from Tcl.

- Changed expression grammar to allow empty attribute name lists and empty
  expression lists.

- Now supporting general relation-valued expressions.

- Now supporting a user-defined comparison operator for user-defined types.

- Type constraints are now specified outside of possible representations.

- Fixed problem with error dialogs in Durotcl.

- Implemented RDB_create_constraint() and RDB_drop_constraint().

- Replaced RDB_expr_attr() by RDB_exp_var().
